objects/Regional_Profile__c.object
<CustomObject>
    <fields>
        <fullName>Account_revenue__c</fullName>
        <label>Account revenue %</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Fulfilment_model__c</fullName>
        <label>Fulfilment model</label>
        <picklist>
            <picklistValues>
                <fullName>DMF/DMFI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indirect</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Global_Business_Forum__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Global Business Forum</label>
        <referenceTo>Global_Business_Forum__c</referenceTo>
        <relationshipName>Merged_Chart_Proposals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Headquarter_country__c</fullName>
        <label>Headquarter country</label>
        <picklist>
            <controllingField>Region_Name__c</controllingField>
            <picklistValues>
                <fullName>Abu Dhabi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aland Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antarctica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua and Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia and Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bouvet Island</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Number_of_countries__c</fullName>
        <label>Number of countries</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Region_Name__c</fullName>
        <label>Region Name</label>
        <picklist>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Americas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia Pacific</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Regional Profile</label>
    <nameField>
        <label>Regional Profile</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Regional Profile</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>